Eliminated JVM redundant parameter warning. Added comments about maxParallelForks setting.